--- a/.github/workflows/release-dongtai-web.yml
+++ b/.github/workflows/release-dongtai-web.yml
@@ -109,6 +109,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             dongtai/dongtai-web:${{ steps.release.outputs.VERSION }}
