--- a/.github/workflows/deploy-to-test.yml
+++ b/.github/workflows/deploy-to-test.yml
@@ -46,11 +46,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
+      - name: Login to AliyunRegistry
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DONGTAI_DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DONGTAI_DOCKERHUB_TOKEN }}
+          registry: ${{ secrets.ALIYUN_REGISTRY }}
+          username: ${{ secrets.ALIYUN_DOCKERHUB_USER }}
+          password: ${{ secrets.ALIYUN_DOCKERHUB_PASSWORD }}
       
       - name: test and build
         run: |
@@ -65,8 +66,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            dongtai/dongtai-web-test:1.0.${{github.run_number}}
-            dongtai/dongtai-web-test:latest
+            registry.cn-hongkong.aliyuncs.com/huoxian_pub/dongtai-web-test:1.0.${{github.run_number}}
+            registry.cn-hongkong.aliyuncs.com/huoxian_pub/dongtai-web-test:latest
 
       - uses: actions/checkout@master
       - name: deploy to cluster
