--- a/.env
+++ b/.env
@@ -14,3 +14,7 @@ VUE_TARGET_HOST = 'http://192.168.0.64:8000'
 # VUE_TARGET_HOST = 'http://iast.huoxian.cn'
 
 VUE_ATOM_TARGET_HOST = 'https://192.168.0.126'
+
+
+DEVSERVER_HOST = 'dev-iast.huoxian.cn'
+
