--- a/.github/workflows/deploy-to-test.yml
+++ b/.github/workflows/deploy-to-test.yml
@@ -1,10 +1,11 @@
 name: Deploy DongTai-Web to AWS
 
 on:
-  pull_request:
-    branches: [ main ]
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - beta
+      - develop
 
 # concurrency:
 #   group: dlc-${{ github.event.pull_request.number || github.ref }}
@@ -66,8 +67,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            registry.cn-hongkong.aliyuncs.com/huoxian_pub/dongtai-web-test:1.0.${{github.run_number}}
-            registry.cn-hongkong.aliyuncs.com/huoxian_pub/dongtai-web-test:latest
+            registry.cn-hongkong.aliyuncs.com/huoxian_pub/dongtai-web-test:1.0.${{github.run_number}}-${{ steps.version.outputs.GITHUB_REF }}
+            registry.cn-hongkong.aliyuncs.com/huoxian_pub/dongtai-web-test:latest-${{ steps.version.outputs.GITHUB_REF }}
 
       - uses: actions/checkout@master
       - name: deploy to cluster
@@ -76,7 +77,10 @@ jobs:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_TEST_DATA }}
         with:
           args: |
-            find deploy/deploy-eks-iast-saas-web-test.yml -type f -exec sed -i 's/VERSION/1.0.${{github.run_number}}/g' {} \;
+            if [ ${{ steps.version.outputs.GITHUB_REF }} = beta ] ; then find deploy/deploy-eks-iast-saas-web-test.yml -type f -exec sed -i 's/iast-test/iast-beta/g' {} \; 
+            elif [ ${{ steps.version.outputs.GITHUB_REF }} = develop ] ; then echo 'testing !!!'
+            else find deploy/deploy-eks-iast-saas-web-test.yml -type f -exec sed -i 's/iast-test/iast-main/g' {} \; ;fi
+            find deploy/deploy-eks-iast-saas-web-test.yml -type f -exec sed -i 's/VERSION/1.0.${{github.run_number}}-${{ steps.version.outputs.GITHUB_REF }}/g' {} \;
             ls deploy/deploy-eks-iast-saas-web-test.yml | xargs -I {} kubectl apply -f {}
       
       - name: finish build
