--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@
 # base api
 VUE_APP_BASE_API = '/api/v1'
 VUE_APP_BASE_API_V2 = '/api/v2'
+VUE_APP_BASE_SCA_V2 = '/api/sca/v2'
+VUE_APP_BASE_SCA_V1 = '/api/sca/v1'
 VUE_APP_UPLOAD = '/upload'
 VUE_APP_OPEN_API = '/openapi'
 VUE_APP_ATOM_API = '/atom-webapi'
