--- a/.github/workflows/deploy-to-test.yml
+++ b/.github/workflows/deploy-to-test.yml
@@ -71,8 +71,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            registry.cn-hongkong.aliyuncs.com/huoxian_pub/dongtai-web-test:1.0.${{github.run_number}}-${{ steps.version.outputs.GITHUB_REF }}
-            registry.cn-hongkong.aliyuncs.com/huoxian_pub/dongtai-web-test:latest-${{ steps.version.outputs.GITHUB_REF }}
+            registry.cn-hongkong.aliyuncs.com/secnium/dongtai-web:${{ steps.version.outputs.GITHUB_REF }}-latest
+            registry.cn-hongkong.aliyuncs.com/secnium/dongtai-web:${{ steps.version.outputs.GITHUB_REF }}-1.0.${{github.run_number}}
 
       - uses: actions/checkout@master
       - name: deploy to cluster
@@ -81,11 +81,14 @@ jobs:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_TEST_DATA }}
         with:
           args: |
-            if [ ${{ steps.version.outputs.GITHUB_REF }} = beta ] ; then find deploy/deploy-eks-iast-saas-web-test.yml -type f -exec sed -i 's/iast-test/iast-beta/g' {} \; 
-            elif [ ${{ steps.version.outputs.GITHUB_REF }} = develop ] ; then echo 'testing !!!'
-            else find deploy/deploy-eks-iast-saas-web-test.yml -type f -exec sed -i 's/iast-test/iast-main/g' {} \; ;fi
-            find deploy/deploy-eks-iast-saas-web-test.yml -type f -exec sed -i 's/VERSION/1.0.${{github.run_number}}-${{ steps.version.outputs.GITHUB_REF }}/g' {} \;
-            ls deploy/deploy-eks-iast-saas-web-test.yml | xargs -I {} kubectl apply -f {}
+            git clone https://github.com/HXSecurity/DongTai.git
+            if [ ${{ steps.version.outputs.GITHUB_REF }} = develop ];
+            then helm upgrade --install huoxian --create-namespace -n iast-test ./DongTai/deploy/kubernetes/helm/ --set mysql.host=iast-mysql-test.huoxian.cn \
+            --set tag=${{ steps.version.outputs.GITHUB_REF }}-latest --set build.web_number=iast${{github.run_number}} --values https://charts.dongtai.io/devops.yaml
+            else
+            helm upgrade --install huoxian --create-namespace -n iast-${{ steps.version.outputs.GITHUB_REF }} ./DongTai/deploy/kubernetes/helm/ --set mysql.host=iast-mysql-test.huoxian.cn \
+            --set tag=${{ steps.version.outputs.GITHUB_REF }}-latest --set build.web_number=iast${{github.run_number}} --values https://charts.dongtai.io/devops.yaml
+            fi
       
       - name: finish build
         uses: joelwmale/webhook-action@master
