--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -54,9 +54,9 @@ jobs:
       - name: Login to AliyunRegistry
         uses: docker/login-action@v3
         with:
-          registry: ${{ secrets.ALIYUN_REGISTRY }}
-          username: ${{ secrets.ALIYUN_DOCKERHUB_USER }}
-          password: ${{ secrets.ALIYUN_DOCKERHUB_PASSWORD }}
+          registry: ${{ secrets.TEN_REGISTRY }}
+          username: ${{ secrets.TEN_DOCKERHUB_USER }}
+          password: ${{ secrets.TEN_DOCKERHUB_PASSWORD }}
       
       - name: test and build
         run: |
@@ -71,8 +71,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            hktingyun.tencentcloudcr.com/dongtai/dongtai-web:${{ steps.version.outputs.GITHUB_REF }}-latest
-            hktingyun.tencentcloudcr.com/dongtai/dongtai-web:${{ steps.version.outputs.GITHUB_REF }}-1.0.${{github.run_number}}
+            wukong.tencentcloudcr.com/dongtai/dongtai-web:${{ steps.version.outputs.GITHUB_REF }}-latest
+            wukong.tencentcloudcr.com/dongtai/dongtai-web:${{ steps.version.outputs.GITHUB_REF }}-1.0.${{github.run_number}}
 
       - name: deploy to cluster
         uses: tscuite/kubectl-helm-action@main
